# gengine

./: .gitignore  CMakeLists.txt  README.md  graphic-stuff.sln
Res/Shader/: FlatColorShader.fs  FlatColorShader.vs  QuadShader.fs  QuadShader.vs  Shader.fs  Shader.vs  SurfaceShader.fs  SurfaceShader.vs
diagrams/: Material.txt  flow.drawio  modelloading.drawio
graphic-stuff/: CMakeLists.txt  error.txt  graphic-stuff.vcxproj  graphic-stuff.vcxproj.filters  main.cpp  path_config.h.in  pch.h  stdout.txt
graphic-stuff/include/: Application.h  Base.h  Buffers.h  Camera3D.h  Event.h  Framebuffer.h  GraphicContext.h  ImageDescriptor.h  ImageHandler.h  Light.h  Logger.h  LoggerAPI.h  Material.h  Mesh.h  ObjLoader.h  OpenGLBuffers.h  OpenGLFramebuffer.h  OpenGLGraphicContext.h  OpenGLRenderer.h  OpenGLVertexArray.h  RenderCommand.h  Renderer3D.h  RendererAPI.h  Scene.h  ShaderProgram.h  StreamRedirector.h  SurfaceMaterial.h  TestApp.h  TestScene.h  Texture.h  VertexArray.h  Window.h  WindowEvent.h  WindowsWindow.h  bufferhelpers.h
graphic-stuff/source/: Application.cpp  Buffers.cpp  Camera3D.cpp  Framebuffer.cpp  GraphicContext.cpp  ImageHandler.cpp  Logger.cpp  LoggerAPI.cpp  Mesh.cpp  ObjLoader.cpp  OpenGLBuffers.cpp  OpenGLFramebuffer.cpp  OpenGLGraphicContext.cpp  OpenGLRenderer.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  RenderCommand.cpp  Renderer3D.cpp  RendererAPI.cpp  ShaderProgram.cpp  ShaderProgram.cpp.orig  TestApp.cpp  TestScene.cpp  Texture.cpp  VertexArray.cpp  Window.cpp  WindowsWindow.cpp
graphic-stuff/vs_static_analyze/: test.ruleset
